# read_itcx

./: CMakeLists.txt  README.md  install.bat  main.cpp
samples/: Diamond.ltcx
src/: CMakeLists.txt
src/mesh_lattice/: CMakeLists.txt  mesh_lattice.cpp
src/mesh_lattice/include/: mesh_lattice.h
src/read_files/: CMakeLists.txt  read_itcx.cpp
src/read_files/include/: read_itcx.h
